[package]
name = "shadowrs"
description = "Tool to shadow existing container with additional tools"
authors = ["chirpcel <git@mkrsten.net>"]
repository = "https://github.com/chirpcel/shadowrs"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
clap    = { version = "4.5", features = ["derive"] }
serde   = { version = "1.0", features = ["derive"] }
spinners = "4.1.1"
toml = "0.8.19"
